# difi-rs

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: parser.rs
docs/adr/: 0001-strict-canonical-packet-writer.md
examples/: udp_receiver.rs  udp_sender.rs  udp_stream.rs
pcap-tests/: README.md  fetch-difi-certification.sh
src/: class_id.rs  command.rs  context.rs  data.rs  error.rs  header.rs  information.rs  lib.rs  packet.rs  packet_stream.rs  parser.rs  payload_format.rs  raw.rs  samples.rs  sequence.rs  standard.rs  validation.rs  version.rs  writer.rs
tests/: allocations.rs  context_version_command.rs  data_packet.rs  helpers.rs  packet_stream.rs  pcap_certification.rs  prologue_and_data.rs  properties.rs  standard_profiles.rs  writer.rs
tests/common/: mod.rs
